parser: MR-JAR with Java 21 overrides (utils fast paths); tests compile with JDK21 toolchain; README documents MR-JAR